# bblocks-meta-register

./: .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml
.github/workflows/: backend-ci.yml  ci.yml  docker-build.yml  frontend-ci.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  logging_config.py  main.py  scheduler.py
backend/app/api/: admin.py  bblocks.py  deps.py  orgs.py  registers.py
backend/app/crawler/: change_detection.py  discovery.py  http.py  indexer.py  orchestrator.py  orphans.py  register_fetch.py
backend/app/db/: base.py  migrate.py  models.py  tables.py
backend/app/mcp/: server.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 0001_initial.py  0002_register_status.py  0003_register_indexer_version.py  0004_fts_description_column.py
backend/app/repositories/: bblocks.py  conflicts.py  crawl_status.py  deps.py  orgs.py  registers.py
backend/app/schemas/: admin.py  bblock.py  org.py  register.py
backend/app/search/: chunking.py  embeddings.py  keyword_index.py  service.py  vector_store.py
backend/app/services/: dependency_graph.py
backend/tests/: conftest.py  test_api_endpoints.py  test_crawler_indexer.py  test_mcp_server.py  test_repositories.py  test_search.py
docs/: 01-overall-architecture.md  02-viewer-application.md  03-indexing-and-search.md  04-backend-implementation-status.md  05-frontend-implementation-status.md
frontend/: .dockerignore  AGENTS.md  Dockerfile  README.md  eslint.config.js  nuxt.config.ts  package.json
frontend/app/: app.vue
(+16 files in other folders)
