[project]
name = "bblocks-meta-register-backend"
version = "0.1.0"
description = "Crawler, data access layer, and API for the OGC Building Blocks meta-registry viewer"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "httpx>=0.27",
    "sqlite-vec (>=0.1.9,<0.2.0)",
    "mcp (>=1.9)",
]

[tool.poetry]
packages = [{ include = "app" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24"
respx = "^0.22"
ruff = "^0.6"

[build-system]
requires = ["poetry-core>=1.9"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 110
target-version = "py312"
